Added a Controller for Catalog Service Added an Enitity for Product Added settings for MongoDB and configured it so that these settings can be injected in any class.

--- a/microservices/ECommMicroservices/src/Catalog/Catalog.API/Catalog.API.csproj
+++ b/microservices/ECommMicroservices/src/Catalog/Catalog.API/Catalog.API.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 
 
