Configured DI for RabbitMQ

--- a/microservices/ECommMicroservices/src/Basket/Basket.API/Basket.API.csproj
+++ b/microservices/ECommMicroservices/src/Basket/Basket.API/Basket.API.csproj
@@ -15,5 +15,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\common\ClassLibrary1\EventBusRabbitMQ.csproj" />
+  </ItemGroup>
+
 
 </Project>
