--- a/microservices/ECommMicroservices/src/Basket/Basket.API/appsettings.json
+++ b/microservices/ECommMicroservices/src/Basket/Basket.API/appsettings.json
@@ -8,6 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Redis":  "localhost:6379"
+    "Redis": "localhost:6379"
+  },
+  "EventBus": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
   }
 }
