Added Ordering API project

--- a/microservices/ECommMicroservices/src/Basket/Basket.API/Basket.API.csproj
+++ b/microservices/ECommMicroservices/src/Basket/Basket.API/Basket.API.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\common\ClassLibrary1\EventBusRabbitMQ.csproj" />
+    <ProjectReference Include="..\..\Common\EventBusRabbitMQ\EventBusRabbitMQ.csproj" />
   </ItemGroup>
 
 
