--- a/microservices/ECommMicroservices/src/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
+++ b/microservices/ECommMicroservices/src/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ordering.Core\Ordering.Core.csproj" />
+  </ItemGroup>
+
 </Project>
