--- a/microservices/ECommMicroservices/src/Ordering/Ordering.API/appsettings.json
+++ b/microservices/ECommMicroservices/src/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderConnection": "Server=localhost;Database=OrderDb;User Id=sa;Password=Hello@123;"
+    "OrderConnection": "Server=localhost;Database=OrderDb;User Id=SA;Password=Hello@123;"
   },
     "Logging": {
       "LogLevel": {
