--- a/microservices/ECommMicroservices/src/Ordering/Ordering.API/Ordering.API.csproj
+++ b/microservices/ECommMicroservices/src/Ordering/Ordering.API/Ordering.API.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
     <ProjectReference Include="..\Ordering.Infrastructure\Ordering.Infrastructure.csproj" />
   </ItemGroup>
 
