Added Rabbit MQ COnfig Registered dependencies for RabbitMQ

--- a/microservices/ECommMicroservices/src/Ordering/Ordering.API/appsettings.json
+++ b/microservices/ECommMicroservices/src/Ordering/Ordering.API/appsettings.json
@@ -2,12 +2,17 @@
   "ConnectionStrings": {
     "OrderConnection": "Server=localhost;Database=OrderDb;User Id=SA;Password=Hello@123;"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "EventBus": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
   }
+}
