Added Docker Support

--- a/microservices/ECommMicroservices/docker-compose.yml
+++ b/microservices/ECommMicroservices/docker-compose.yml
@@ -18,3 +18,10 @@ services:
             context: .
             dockerfile: src/Basket/Basket.API/Dockerfile
 
+
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: src/Ordering/Ordering.API/Dockerfile
+
