--- a/microservices/ECommMicroservices/docker-compose.override.yml
+++ b/microservices/ECommMicroservices/docker-compose.override.yml
@@ -64,7 +64,7 @@ services:
         restart: on-failure
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
-            - "ConnectionStrings:OrderConnection=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+            - "ConnectionStrings:OrderConnection=Server=orderdb;Database=OrderDb;User Id=sa;Password=Hello@123"
             - "EventBus:HostName=rabbitmq"
         depends_on:
             - orderdb
