--- a/microservices/ECommMicroservices/docker-compose.override.yml
+++ b/microservices/ECommMicroservices/docker-compose.override.yml
@@ -21,7 +21,7 @@ services:
         ports:
             - "1433:1433"
         environment:
-            SA_PASSWORD: "SwN12345678"
+            SA_PASSWORD: "Hello@123"
             ACCEPT_EULA: "Y"
 
     rabbitmq:
